--- a/kawaiiCanon/TemplateData/style.css
+++ b/kawaiiCanon/TemplateData/style.css
@@ -1,8 +1,7 @@
-body { padding: 0; margin: 0 }
-/* #unity-container { position: absolute }
-#unity-container.unity-desktop { left: 50%; top: 65%; transform: translate(-50%, -35%) }
-#unity-container.unity-mobile { width: 100%; height: 100% } */
-#unity-canvas { background: #231F20 }
+#unity-container { position: absolute }
+#unity-container.unity-desktop { left: 50%; top: 56%; transform: translate(-50%, -44%) }
+#unity-container.unity-mobile { width: 100%; height: 100% }
+#unity-canvas { background: #0b516f }
 .unity-mobile #unity-canvas { width: 80%; height: 80% }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
